HW8 base + optional

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -23,6 +23,14 @@ tr[data-mealExcess="true"] {
     color: blue;
 }
 
+tr[data-enabled="true"] {
+    color: green;
+}
+
+tr[data-enabled="false"] {
+    color: red;
+}
+
 .fa {
     cursor: pointer;
 }
